[gd_scene load_steps=19 format=3 uid="uid://dhds5jcdiahml"]

[ext_resource type="Script" path="res://scripts/game/GameSceneLight.gd" id="1_2buu2"]
[ext_resource type="PackedScene" uid="uid://t4vct17iw75l" path="res://scenes/world/WorldGroundA.tscn" id="2_r5s6g"]
[ext_resource type="PackedScene" uid="uid://wby3ca76uw6y" path="res://scenes/world/WorldBigGround.tscn" id="2_yve4u"]
[ext_resource type="PackedScene" uid="uid://bq70rhxp82gaf" path="res://scenes/world/WorldWallSlant.tscn" id="3_p5cdk"]
[ext_resource type="PackedScene" uid="uid://bgf2qub2apsg6" path="res://scenes/world/WorldBigWall.tscn" id="4_na0uw"]
[ext_resource type="PackedScene" uid="uid://bgj4mowmgtqxp" path="res://scenes/world/WorldDoors.tscn" id="5_lf333"]
[ext_resource type="PackedScene" uid="uid://c04g4fddeafan" path="res://scenes/world/WorldSpawner.tscn" id="6_n067i"]
[ext_resource type="PackedScene" uid="uid://cvnkqaou2k6we" path="res://scenes/world/WorldBars.tscn" id="7_trv0q"]
[ext_resource type="PackedScene" uid="uid://2sbmksk01i4b" path="res://scenes/world/WorldGroundB.tscn" id="8_kxpnp"]
[ext_resource type="PackedScene" uid="uid://dc10vmn4wryqw" path="res://scenes/world/WorldCeiling.tscn" id="11_tikoj"]
[ext_resource type="Texture2D" uid="uid://dtsr0ngd4o01o" path="res://assets/sprites/skybox/skybox_cube_panorama.png" id="15_8ukxv"]
[ext_resource type="PackedScene" uid="uid://b8tc7q5tq6x8m" path="res://scenes/player/PlayerScene.tscn" id="16_i7at4"]

[sub_resource type="BoxShape3D" id="BoxShape3D_238eg"]
size = Vector3(97, 1, 102)

[sub_resource type="BoxShape3D" id="BoxShape3D_qkmqw"]
size = Vector3(63.58, 8.2832, 1)

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_supnq"]
panorama = ExtResource("15_8ukxv")
filter = false

[sub_resource type="Sky" id="Sky_7tnta"]
sky_material = SubResource("PanoramaSkyMaterial_supnq")

[sub_resource type="Environment" id="Environment_vdd5h"]
background_mode = 2
sky = SubResource("Sky_7tnta")
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_sky_contribution = 0.0

[sub_resource type="BoxShape3D" id="BoxShape3D_k884e"]
size = Vector3(10, 3, 1)

[node name="GameSceneLight" type="Node3D"]
script = ExtResource("1_2buu2")

[node name="GameWorld" type="Node3D" parent="."]

[node name="ArenaA" type="Node3D" parent="GameWorld"]

[node name="Ground" type="Node3D" parent="GameWorld/ArenaA"]

[node name="WorldBigGround" parent="GameWorld/ArenaA/Ground" instance=ExtResource("2_yve4u")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)

[node name="WorldBigGround2" parent="GameWorld/ArenaA/Ground" instance=ExtResource("2_yve4u")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 32)

[node name="WorldBigGround3" parent="GameWorld/ArenaA/Ground" instance=ExtResource("2_yve4u")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 32, 0, 32)

[node name="WorldBigGround4" parent="GameWorld/ArenaA/Ground" instance=ExtResource("2_yve4u")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 32, 0, 0)

[node name="Walls" type="Node3D" parent="GameWorld/ArenaA"]

[node name="WorldWallSlant" parent="GameWorld/ArenaA/Walls" instance=ExtResource("3_p5cdk")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -28, 0, -32)

[node name="WorldWallSlant2" parent="GameWorld/ArenaA/Walls" instance=ExtResource("3_p5cdk")]
transform = Transform3D(1.31134e-07, 0, 1, 0, 1, 0, -1, 0, 1.31134e-07, 32, 0, -28)

[node name="WorldWallSlant3" parent="GameWorld/ArenaA/Walls" instance=ExtResource("3_p5cdk")]
transform = Transform3D(1, 0, -1.74846e-07, 0, 1, 0, 1.74846e-07, 0, 1, 28, 0, 32)

[node name="WorldWallSlant4" parent="GameWorld/ArenaA/Walls" instance=ExtResource("3_p5cdk")]
transform = Transform3D(-2.18557e-07, 0, -1, 0, 1, 0, 1, 0, -2.18557e-07, -32, 0, 28)

[node name="WorldBigWall" parent="GameWorld/ArenaA/Walls" instance=ExtResource("4_na0uw")]
transform = Transform3D(4, 0, 0, 0, 4, 0, 0, 0, 4, -36, 0, 28)

[node name="WorldBigWall2" parent="GameWorld/ArenaA/Walls" instance=ExtResource("4_na0uw")]
transform = Transform3D(-1.74846e-07, 0, 4, 0, 4, 0, -4, 0, -1.74846e-07, 28, 0, 36)

[node name="WorldBigWall3" parent="GameWorld/ArenaA/Walls" instance=ExtResource("4_na0uw")]
transform = Transform3D(-4, 0, -3.49691e-07, 0, 4, 0, 3.49691e-07, 0, -4, 36, 0, -28)

[node name="WorldBigWall4" parent="GameWorld/ArenaA/Walls" instance=ExtResource("4_na0uw")]
transform = Transform3D(5.24537e-07, 0, -4, 0, 4, 0, 4, 0, 5.24537e-07, -28, 0, -36)

[node name="Spawners" type="Node3D" parent="GameWorld/ArenaA"]

[node name="WorldSpawner1" parent="GameWorld/ArenaA/Spawners" instance=ExtResource("6_n067i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 36, 8, -20)

[node name="WorldSpawner2" parent="GameWorld/ArenaA/Spawners" instance=ExtResource("6_n067i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 36, 8, -12)

[node name="WorldSpawner3" parent="GameWorld/ArenaA/Spawners" instance=ExtResource("6_n067i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 36, 8, -4)

[node name="WorldSpawner4" parent="GameWorld/ArenaA/Spawners" instance=ExtResource("6_n067i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 36, 8, 8)

[node name="WorldSpawner5" parent="GameWorld/ArenaA/Spawners" instance=ExtResource("6_n067i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 36, 8, 16)

[node name="WorldSpawner6" parent="GameWorld/ArenaA/Spawners" instance=ExtResource("6_n067i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 36, 8, 24)

[node name="WorldSpawner7" parent="GameWorld/ArenaA/Spawners" instance=ExtResource("6_n067i")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 20, 8, 36)

[node name="WorldSpawner8" parent="GameWorld/ArenaA/Spawners" instance=ExtResource("6_n067i")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 12, 8, 36)

[node name="WorldSpawner9" parent="GameWorld/ArenaA/Spawners" instance=ExtResource("6_n067i")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 4, 8, 36)

[node name="WorldSpawner10" parent="GameWorld/ArenaA/Spawners" instance=ExtResource("6_n067i")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -8, 8, 36)

[node name="WorldSpawner11" parent="GameWorld/ArenaA/Spawners" instance=ExtResource("6_n067i")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -16, 8, 36)

[node name="WorldSpawner12" parent="GameWorld/ArenaA/Spawners" instance=ExtResource("6_n067i")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -24, 8, 36)

[node name="WorldSpawner13" parent="GameWorld/ArenaA/Spawners" instance=ExtResource("6_n067i")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -36, 8, 20)

[node name="WorldSpawner14" parent="GameWorld/ArenaA/Spawners" instance=ExtResource("6_n067i")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -36, 8, 12)

[node name="WorldSpawner15" parent="GameWorld/ArenaA/Spawners" instance=ExtResource("6_n067i")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -36, 8, 4)

[node name="WorldSpawner16" parent="GameWorld/ArenaA/Spawners" instance=ExtResource("6_n067i")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -36, 8, -12)

[node name="WorldSpawner17" parent="GameWorld/ArenaA/Spawners" instance=ExtResource("6_n067i")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -36, 8, -20)

[node name="WorldSpawner18" parent="GameWorld/ArenaA/Spawners" instance=ExtResource("6_n067i")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -36, 8, -28)

[node name="WorldSpawner19" parent="GameWorld/ArenaA/Spawners" instance=ExtResource("6_n067i")]
transform = Transform3D(1.31134e-07, 0, 1, 0, 1, 0, -1, 0, 1.31134e-07, -20, 8, -36)

[node name="WorldSpawner20" parent="GameWorld/ArenaA/Spawners" instance=ExtResource("6_n067i")]
transform = Transform3D(1.31134e-07, 0, 1, 0, 1, 0, -1, 0, 1.31134e-07, -12, 8, -36)

[node name="WorldSpawner21" parent="GameWorld/ArenaA/Spawners" instance=ExtResource("6_n067i")]
transform = Transform3D(1.31134e-07, 0, 1, 0, 1, 0, -1, 0, 1.31134e-07, -4, 8, -36)

[node name="WorldSpawner22" parent="GameWorld/ArenaA/Spawners" instance=ExtResource("6_n067i")]
transform = Transform3D(1.31134e-07, 0, 1, 0, 1, 0, -1, 0, 1.31134e-07, 8, 8, -36)

[node name="WorldSpawner23" parent="GameWorld/ArenaA/Spawners" instance=ExtResource("6_n067i")]
transform = Transform3D(1.31134e-07, 0, 1, 0, 1, 0, -1, 0, 1.31134e-07, 16, 8, -36)

[node name="WorldSpawner24" parent="GameWorld/ArenaA/Spawners" instance=ExtResource("6_n067i")]
transform = Transform3D(1.31134e-07, 0, 1, 0, 1, 0, -1, 0, 1.31134e-07, 24, 8, -36)

[node name="Doors" type="Node3D" parent="GameWorld/ArenaA"]

[node name="WorldDoors2" parent="GameWorld/ArenaA/Doors" instance=ExtResource("5_lf333")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -38, 0, 0)

[node name="WorldBars1" parent="GameWorld/ArenaA/Doors" instance=ExtResource("7_trv0q")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 39)

[node name="WorldBars2" parent="GameWorld/ArenaA/Doors" instance=ExtResource("7_trv0q")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -39, 0, -4)

[node name="Connections" type="Node3D" parent="GameWorld"]

[node name="Ground" type="Node3D" parent="GameWorld/Connections"]

[node name="WorldGroundB" parent="GameWorld/Connections/Ground" instance=ExtResource("8_kxpnp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -36, 0, 0)

[node name="WorldGroundB2" parent="GameWorld/Connections/Ground" instance=ExtResource("8_kxpnp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -40, 0, 0)

[node name="WorldGroundA7" parent="GameWorld/Connections/Ground" instance=ExtResource("2_r5s6g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 40)

[node name="WorldGroundA8" parent="GameWorld/Connections/Ground" instance=ExtResource("2_r5s6g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 36)

[node name="Walls" type="Node3D" parent="GameWorld/Connections"]
visible = false

[node name="Ceiling" type="Node3D" parent="GameWorld/Connections"]

[node name="WorldCeiling2" parent="GameWorld/Connections/Ceiling" instance=ExtResource("11_tikoj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 40)

[node name="Pickups" type="Node3D" parent="GameWorld"]

[node name="PickupGun" type="Node3D" parent="GameWorld/Pickups"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, 0)

[node name="Colliders" type="Node3D" parent="GameWorld"]

[node name="HardSurface" type="StaticBody3D" parent="GameWorld/Colliders"]

[node name="HardSurfaceCollider" type="CollisionShape3D" parent="GameWorld/Colliders/HardSurface"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 8.5)
shape = SubResource("BoxShape3D_238eg")

[node name="CollisionWalls" type="Node3D" parent="GameWorld"]

[node name="HardSurface" type="StaticBody3D" parent="GameWorld/CollisionWalls"]

[node name="HardSurfaceCollider" type="CollisionShape3D" parent="GameWorld/CollisionWalls/HardSurface"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.50016, 3.6416, -32.499)
shape = SubResource("BoxShape3D_qkmqw")

[node name="CollisionWalls4" type="Node3D" parent="GameWorld"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="HardSurface" type="StaticBody3D" parent="GameWorld/CollisionWalls4"]

[node name="HardSurfaceCollider" type="CollisionShape3D" parent="GameWorld/CollisionWalls4/HardSurface"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 19.8645, 3.6416, -32.499)
shape = SubResource("BoxShape3D_qkmqw")

[node name="CollisionWalls5" type="Node3D" parent="GameWorld"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 22, 0, 0)

[node name="HardSurface" type="StaticBody3D" parent="GameWorld/CollisionWalls5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.77617, 0, 3.30123e-07)

[node name="HardSurfaceCollider" type="CollisionShape3D" parent="GameWorld/CollisionWalls5/HardSurface"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.05739, 3.6416, -32.499)
shape = SubResource("BoxShape3D_qkmqw")

[node name="CollisionWalls2" type="Node3D" parent="GameWorld"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)

[node name="HardSurface" type="StaticBody3D" parent="GameWorld/CollisionWalls2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.58606e-09, 0, -0.0591621)

[node name="HardSurfaceCollider" type="CollisionShape3D" parent="GameWorld/CollisionWalls2/HardSurface"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.50016, 3.6416, -32.499)
shape = SubResource("BoxShape3D_qkmqw")

[node name="CollisionWalls3" type="Node3D" parent="GameWorld"]
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 0, 0, 0)

[node name="HardSurface" type="StaticBody3D" parent="GameWorld/CollisionWalls3"]

[node name="HardSurfaceCollider" type="CollisionShape3D" parent="GameWorld/CollisionWalls3/HardSurface"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.15984, 3.6416, -32.3079)
shape = SubResource("BoxShape3D_qkmqw")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_vdd5h")

[node name="CharacterBodies" type="Node3D" parent="."]

[node name="PlayerScene" parent="CharacterBodies" instance=ExtResource("16_i7at4")]
transform = Transform3D(1, 0, 1.06581e-14, 0, 1, 0, -1.06581e-14, 0, 1, 2, 3, 29)

[node name="BeginningArenaA" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 2, 28)

[node name="CollisionShape3D" type="CollisionShape3D" parent="BeginningArenaA"]
shape = SubResource("BoxShape3D_k884e")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="BeginningArenaA"]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 5, 0, 0)
shape = SubResource("BoxShape3D_k884e")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="BeginningArenaA"]
transform = Transform3D(-0.5, 0, -0.866025, 0, 1, 0, 0.866025, 0, -0.5, -3, 0, 0)
shape = SubResource("BoxShape3D_k884e")

[connection signal="body_entered" from="BeginningArenaA" to="." method="_on_beginning_arena_a_body_entered"]
